[gd_scene load_steps=2 format=2]

[ext_resource path="res://tests/movement/MovementStat.gd" type="Script" id=1]

[node name="MovementStat" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1704.0
margin_bottom = -1060.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_top = 5.0
margin_right = 83.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "NAME"

[node name="Value" type="LineEdit" parent="."]
margin_left = 87.0
margin_right = 170.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "100"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 174.0
margin_right = 215.0
margin_bottom = 24.0

[node name="Increase" type="Button" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 24.0
text = "+"

[node name="Decrease" type="Button" parent="HBoxContainer"]
margin_left = 24.0
margin_right = 41.0
margin_bottom = 24.0
text = "-"
[connection signal="focus_exited" from="Value" to="." method="_on_Value_focus_exited"]
[connection signal="text_entered" from="Value" to="." method="_on_Value_text_entered"]
[connection signal="pressed" from="HBoxContainer/Increase" to="." method="_on_Increase_pressed"]
[connection signal="pressed" from="HBoxContainer/Decrease" to="." method="_on_Decrease_pressed"]
